--- a/src/app/products/components/product-detail/product-detail.component.html
+++ b/src/app/products/components/product-detail/product-detail.component.html
@@ -50,11 +50,13 @@
     </div>
   </div>
 
-  <!-- <div class='card-footer'>
-    <button class='btn btn-outline-secondary'
-            (click)='onBack()'
-            style='width:80px'>
-      <i class='fa fa-chevron-left'></i> Back
+  <div class="card-footer">
+    <button
+      class="btn btn-outline-secondary"
+      (click)="onBack()"
+      style="width:80px"
+    >
+      <i class="fa fa-chevron-left"></i> Back
     </button>
-  </div> -->
+  </div>
 </div>
